--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hellow from uozerarb.ru
+<h1>Гостевой дом "У Озера"</h1>
+<p>
+Дорогие гости и жители Улан-Удэ, гостевой дом "У Озера" предлагает отдохнуть на живописном берегу водоема.
+Дом расположен в 7 км от центра города. Мы рады предложить вам 4 благоустроенных номера где вы можете комфортно отдохнуть !
+</p>
+<p>
+Конные прогулки, катание на лодке, рыбалка, мангал, тент и парковка.
+</p>
+<p>
+Наш адрес: Улан-Удэ, Советский район, ДНТ Современник, ул. 2, дом 49.
+Телефон: +7 983 4209470, для УУ короткий 309470.
+</p>
