--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 Конные прогулки, катание на лодке, рыбалка, мангал, тент и парковка.
 </p>
 <p>
-Наш адрес: Улан-Удэ, Советский район, ДНТ Современник, ул. 2, дом 49.
+Наш адрес: Улан-Удэ, Советский район, ДНТ Современник, ул. 2, дом 49.<br/>
 Телефон: +7 983 4209470, для УУ короткий 309470.
 </p>
