--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 </p>
 <p>
 Наш адрес: Улан-Удэ, Советский район, ДНТ Современник, ул. 2, дом 49.<br/>
-Телефон: +7 983 4209470, для УУ короткий 309470.
-</p>
+Телефон: +7 983 4209470, для Улан-Удэ короткий 309470.
+</p> 
