--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: main
+title: 'Гостевой дом "У Озера"'
+---
+
 <h1>Гостевой дом "У Озера"</h1>
 <p>
 Дорогие гости и жители Улан-Удэ, гостевой дом "У Озера" предлагает отдохнуть на живописном берегу водоема.
