--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@ layout: main
 title: 'Гостевой дом "У Озера"'
 ---
 
-<h1>Welcome to the CSS3_seascape_two template</h1>
-<p>This simple, fixed width website template is released under a <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0 Licence</a>. This means you are free to download and use it for personal and commercial projects. However, you <strong>must leave the 'design from css3templates.co.uk' link in the footer of the template</strong>.</p>
-<p>This template is written entirely in <strong>HTML5</strong> and <strong>CSS3</strong>. The photos shown in this template were taken by me. You can view more free CSS3 web templates <a href="http://www.css3templates.co.uk">here</a>.</p>
-<p>This template is a fully documented 5 page website, with an <a href="examples.html">examples</a> page that gives examples of all the styles available with this design. There is also a working PHP contact form on the contact page. All of the seascapes were taken by me - use as you wish.</p>
+<h1>Гостевой дом "У Озера"</h1>
+
+<p>
+Дорогие гости и жители Улан-Удэ Гостевой дом "У Озера" предлагает отдохнуть на живописном берегу водоема. 
+</p>
+<p>
+Дом расположен в 7 км от центра города. Мы рады предложить вам 4 благоустроенных номера где вы можете отдохнуть с комфортом !
+</p>
+<p>
+Кухня-столовая где можно провести вечер с друзьями!
+</p>
+<p>
+В перечень дополнительных услуг входит : конные прогулки, катание на лодке, рыбалка, мангал, тент и парковка.
+</p>
+<p>
+Улан-Удэ, Советский район, ДНТ Современник, ул. 2, дом 49.<br/>
+Телефон: Для Улан-Удэ 309470, Федеральный +79834209470.<br/>
+E-mail: e-mail@uozerarb.ru, uozerarb@mail.ru 
+</p>
