--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: main
 title: 'Гостевой дом "У Озера"'
 ---
 
-<h1>Гостевой дом "У Озера"</h1>
+<h1>Здравствуйте !</h1>
 
 <p>
 Дорогие гости и жители Улан-Удэ Гостевой дом "У Озера" предлагает отдохнуть на живописном берегу водоема. 
