--- a/index.html
+++ b/index.html
@@ -22,3 +22,6 @@ title: 'Гостевой дом "У Озера"'
 Телефон: Для Улан-Удэ 309470, Федеральный +79834209470.<br/>
 E-mail: e-mail@uozerarb.ru, uozerarb@mail.ru 
 </p>
+<center>
+<script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=e468tB_qoU70ygvUINhjPqjrrWv42RGI&width=600&height=450"></script>
+</center>
