--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ title: 'Гостевой дом "У Озера"'
 В перечень дополнительных услуг входит : конные прогулки, катание на лодке, рыбалка, мангал, тент и парковка.
 </p>
 <p>
-Улан-Удэ, Советский район, ДНТ Современник, ул. 2, дом 49.<br/>
-Телефон: Для Улан-Удэ 309470, Федеральный +79834209470.<br/>
-E-mail: e-mail@uozerarb.ru, uozerarb@mail.ru 
+<span class="prm">Наш адрес:</span> Улан-Удэ, Советский район, ДНТ Современник, ул. 2, дом 49.<br/>
+<span class="prm">Телефон:</span> Для Улан-Удэ 309470, Федеральный +79834209470.<br/>
+<span class="prm">E-mail:</span> e-mail@uozerarb.ru, uozerarb@mail.ru 
 </p>
 <div class="mapya">
 <script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=e468tB_qoU70ygvUINhjPqjrrWv42RGI&width=600&height=450"></script>
